# d2r-discord-bot

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/: CMakeLists.txt
src/bgs/: CMakeLists.txt
src/bgs/cmake/: GenerateProtobuf.cmake
src/bgs/sdk/: CMakeLists.txt
src/bgs/sdk/bgs/low/pb/client/: account_service.proto  account_types.proto  attribute_types.proto  authentication_service.proto  connection_service.proto  content_handle_types.proto  entity_types.proto  resource_service.proto  role_types.proto  rpc_config.proto  rpc_types.proto  semantic_version.proto  session_service.proto  session_types.proto
src/bgs/sdk/bgs/low/pb/client/api/client/v2/: account_types.proto  attribute_types.proto  game_account_handle.proto  game_utilities_service.proto
src/bgs/src/: CMakeLists.txt  pch.h
src/bgs/src/Rpc/: Channel.cpp  Channel.h  ErrorCode.h  Packet.cpp  Packet.h  Request.cpp  Request.h  Response.cpp  Response.h  Router.cpp  Router.h  Service.h
src/bgs/src/Transport/: Connection.cpp  Connection.h
src/bgs/src/Utils/: ByteBuffer.h  ByteConverter.h  MoveOnlyFunction.h
src/d2r-discord-bot/: CMakeLists.txt  app.dist.yml  pch.h
src/d2r-discord-bot/src/: BnetSession.cpp  BnetSession.h  Client.cpp  Client.h  ClientRepository.cpp  ClientRepository.h  DiabloClone.cpp  DiabloClone.h  RealmSession.cpp  RealmSession.h  Terrorized.h  main.cpp
src/d2r-discord-bot/src/Services/: AuthenticationListener.cpp  AuthenticationListener.h  ConnectionService.cpp  ConnectionService.h  SessionListener.cpp  SessionListener.h
src/d2r-discord-bot/src/Services/Classic/: D2rServicesConnection.cpp  D2rServicesConnection.h  DiabloCloneExternalListener.cpp  DiabloCloneExternalListener.h  GameVersionListener.cpp  GameVersionListener.h  GenericResourceListener.cpp  GenericResourceListener.h  LeaderboardListener.cpp  LeaderboardListener.h  LimitedTimeEventListener.cpp  LimitedTimeEventListener.h  TerrorZonesListener.cpp  TerrorZonesListener.h
